source/go-bbq/k8s-go-bbq-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: go-bbq
spec:
  template:
    metadata:
      labels:
        app: go-bbq
    spec:
      containers:
      - name: go-bbq
        image: myfamilycooks.azurecr.io/bbq/go-bbq:0.0.4
        ports:
        - containerPort: 21337
      imagePullSecrets:
      - name: myfamilycooks
